# lidar_cam_fusion

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: fusion_config.yaml
launch/: fusion.launch.py  fusion_launch.py
lidar_cam_fusion/: fusion_node.py
msg/: DetectedObject.msg  FusionDetections.msg
tools/: calibration.py
