<?xml version="1.0"?>
<package format="3">
  <name>lidar_cam_fusion</name>
  <version>0.1.0</version>
  <description>LiDAR × Camera fusion node (RGBD publishing, Foxy)</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>ament_index_python</depend>

  <!-- optional i think -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
